test page: minor chnges made

--- a/test-page.html
+++ b/test-page.html
@@ -203,7 +203,8 @@
                 </div>
             </div>
         </nav>
-        <div class="container my-5 vh-100">
+        <div class="container my-5 vh-80">
+            <p class="lead">Stuff goes here</p>
         </div>
     </main>
     <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
