adminmainpage final deployment (old page depricated)

--- a/test-page.html
+++ b/test-page.html
@@ -6,9 +6,10 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Navbar Template · Bootstrap v5.3</title>
+    <title>Test Page</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
     <link href="assets/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
     <style>
         .bd-placeholder-img {
@@ -187,6 +188,11 @@
             <p class="lead">Stuff goes here</p>
         </div>
     </main>
+    <script>
+        $(document).ready(function() {
+            $('[data-toggle="tooltip"]').tooltip();
+        });
+    </script>
     <script src="assets/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
