inventory-view pages changed

--- a/test-page.html
+++ b/test-page.html
@@ -158,7 +158,7 @@
                 <a href="logout.php" style="text-decoration: none;color:azure;" class="lead">Logout(Logged in as
                     Admin)</a>
 
-                <div class="offcanvas offcanvas-start text-bg-light" tabindex="-1" id="offcanvasNavbarDark" aria-labelledby="offcanvasNavbarDarkLabel">
+                <div class="offcanvas offcanvas-start text-bg-auto" tabindex="-1" id="offcanvasNavbarDark" aria-labelledby="offcanvasNavbarDarkLabel">
                     <div class="offcanvas-header">
                         <h5 class="offcanvas-title" id="offcanvasNavbarDarkLabel">PHARMACIA</h5>
                         <button type="button" class="btn-close btn-close-dark" data-bs-theme="dark" data-bs-dismiss="offcanvas" aria-label="Close"></button>
